packages/fuselage/src/components/Message/Messages.styles.scss
@use '../../styles/lengths.scss';
@use '../../styles/functions.scss';
@use '../../styles/colors.scss';
@use '../../styles/mixins/size.scss';
@use '../../styles/typography.scss';
@use './mixins.scss';

@import './MessageMetrics/MessageMetrics.styles.scss';
@import './MessageToolbox/MessageToolbox.styles.scss';
@import './MessageReactions/MessageReactions.styles.scss';
@import './ThreadMessage/ThreadMessage.styles.scss';
@import './MessageDivider/MessageDivider.styles.scss';
@import './MessageStatusIndicator/MessageStatusIndicator.styles.scss';
@import './MessageSystem/MessageSystem.styles.scss';

%rcx-margins-header {
  margin-inline: lengths.margin(2);
}
%rcx-margins-block {
  margin-block: lengths.margin(2);
}

$message-background-color: functions.theme(
  'message-background-color',
  colors.foreground(alternative)
);

$message-background-color-focus: functions.theme(
  'message-background-color-focus',
  colors.neutral(100)
);

$message-background-color-selected: functions.theme(
  'message-background-color-selected',
  colors.foreground(success-light)
);

$message-background-color-editing: functions.theme(
  'message-background-color-editing',
  colors.foreground(highlight)
);

$message-background-color-highlight: functions.theme(
  'message-background-color-highlight',
  colors.foreground(highlight)
);

.rcx-message {
  @include mixins.container();
  position: relative;

  display: flex;
  flex-direction: row;
  align-items: flex-start;

  padding-block: lengths.padding(12);

  padding-inline: lengths.padding(20);

  background-color: $message-background-color;

  &:hover,
  &:focus {
    background: $message-background-color-focus;
  }

  &--selected {
    background: $message-background-color-selected !important;
  }

  &--editing {
    background: $message-background-color-editing !important;
  }

  &--highlight {
    animation: background-fade 6s forwards;
  }

  &--pending {
    .rcx-message-body {
      opacity: 0.4;
    }
  }

  @keyframes background-fade {
    50% {
      background: $message-background-color-highlight;
    }

    100% {
      background: $message-background-color;
    }
  }

  &--clickable {
    cursor: pointer;
  }

  &-header {
    @extend %rcx-margins-block;
    display: flex;
    flex-direction: row;
    flex-grow: 0;
    flex-shrink: 1;

    min-width: 1px;

    &__wrapper {
      @include typography.use-with-truncated-text();
      display: flex;
      flex-direction: row;
      align-items: baseline;
      flex-grow: 1;
      flex-shrink: 1;

      min-width: 1px;
      margin-block: lengths.margin(-4);
      margin-inline: lengths.margin(-2);
    }

    &__time {
      @extend %rcx-margins-header;
      @include typography.use-with-truncated-text();
      @include typography.use-font-scale(c1);
      flex-shrink: 0;

      color: colors.neutral(600);
    }

    &__name {
      @extend %rcx-margins-header;
      @include typography.use-font-scale(h5);
      @include typography.use-with-truncated-text();
      flex-shrink: 1;

      color: colors.foreground(default);
    }

    &__username {
      @extend %rcx-margins-header;
      @include typography.use-font-scale(p2m);
      @include typography.use-with-truncated-text();
      flex-shrink: 1;

      color: colors.foreground(hint);
    }

    &__roles {
      display: flex;
      flex-shrink: 1;
      @include typography.use-with-truncated-text();
    }

    &__role {
      @extend %rcx-margins-header;
    }
  }

  &-body {
    @extend %rcx-margins-block;
    @include typography.use-font-scale(p2);

    flex-shrink: 1;

    transition: opacity 0.3s linear;

    opacity: 1;

    color: colors.neutral(800);

    &--clamp {
      display: -webkit-box;
      overflow: hidden;

      word-break: break-word;
      -webkit-box-orient: vertical;
      -webkit-line-clamp: 2;

      &-2 {
        -webkit-line-clamp: 2;
      }

      &-3 {
        -webkit-line-clamp: 3;
      }

      &-4 {
        -webkit-line-clamp: 3;
      }
    }
  }

  &-block {
    @extend %rcx-margins-block;
    display: flex;
    flex-direction: column;
  }

  &-paragraph {
    margin: 0;
    padding: 0;

    &:empty::before {
      display: inline-block;

      content: '';
    }
  }

  &-unordered-list {
    padding-top: lengths.padding(4);

    list-style: none;

    &__item {
      &::before {
        padding: 0 lengths.padding(8);

        content: '•';

        font-weight: bold;
      }
    }
  }

  &-ordered-list {
    padding-top: lengths.padding(4);

    list-style: none;

    &__item {
      &::before {
        padding: 0 lengths.padding(8);

        content: attr(value) '.';

        font-weight: bold;
      }
    }
  }

  &__emoji {
    display: inline-block;

    margin-inline: lengths.margin(2);

    background-size: contain;
    @include size.square(lengths.size(24));

    &--big {
      @include size.square(lengths.size(44));
    }
  }
}

